# lab6

./: .coverage  .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  generate_tree.py  pyproject.toml  test_redis.py
app/: main.py  models.py  schemas.py
app/cache/: redis_client.py
app/controllers/: __init__.py  order_controller.py  product_controller.py  user_controller.py
app/messaging/: consumer.py  producer.py  seed_rabbit.py
app/repositories/: __init__.py  order_repository.py  product_repository.py  user_repository.py
app/services/: __init__.py  order_service.py  product_service.py  user_service.py
scripts/: load_data.py  update_data.py
tests/: conftest.py
tests/test_controllers/: test_user_routes.py
tests/test_repositories/: test_order_repository.py  test_product_repository.py  test_user_repository.py
tests/test_services/: test_order_service.py  test_user_service.py
